--- a/content/projects/hinged-tessellations.mkd
+++ b/content/projects/hinged-tessellations.mkd
@@ -2,16 +2,17 @@ title: Hinged Tessellations
 slug: hinged-tessellations
 type: blog-article
 category: projects
-date: 2011-10-12
-tags: [geometry, python]
+date: 2014-02-01
+tags: [geometry, javascript]
 title_img_src: http://img.svbtle.com/al4j2g38imlqww.gif
 
 snippet: >
-    A _tessellation_ is a set of figures which can cover the plane indefinitely. A _hinged tessellation_ is a set of figures which not only cover the plane indefinitely, but has a set of hinges such that each figure can rotate about it's neighbours...
+    A tessellation is a set of figures which can cover the plane indefinitely. A hinged tessellation is a set of figures which not only cover the plane indefinitely, but has a set of hinges such that each figure can rotate about it's neighbours...
+
 ---
 
 ![hinge-tess-anim.gif](/images/hinged-tessellations/hinge-tess-anim.gif)
-
+<span class="caption"> Jump to the <a href="/hingedtessapp"> interactive version </a></span>
 #What are they?
 A _tessellation_ is a set of figures which can cover the plane indefinitely. A _hinged tessellation_ is a set of figures which not only cover the plane indefinitely, but has a set of hinges such that each figure can rotate about it's neighbours.
 
@@ -50,13 +51,7 @@ I first tried a few times tessellating just the cyclic quads in a similar fashio
 
 [![fold-it.png](https://d23f6h5jpj26xu.cloudfront.net/n6tnhu7os6maeq_small.png)](http://img.svbtle.com/n6tnhu7os6maeq.png)
 
-The next step was trying to come up with a geometric proof, but I had no real idea how to go about it (I'm an engineer! I like finding the answers, but coming up with a real proof seemed pretty tough). I had a meeting with a computer graphics professor one day and brought up this little problem, and his suggestion was just to code up a solution - which seemed like a good plan, as best case scenario I stumble across a proof, worst case, I have a little program to draw hinged tessellations!
+The next step was trying to come up with a geometric proof, but as I had no good idea of how to go about it I ended up writing a little [javascript/canvas application](/hingedtessapp) which would let you at least try all of them. (Sorry for the bugs, but this was from a few years back and one of my first forays into programming for the web!)
 
-Anyway, without further ado:
-
-<div style="width:100%; height:100px; background:'red'">hello world </div>
-
-
-Or check it out on it's own site: 
 
  
