--- a/content/projects/scrabble15.mkd
+++ b/content/projects/scrabble15.mkd
@@ -16,118 +16,98 @@ A couple of days later this puzzle popped back into my head (somehow during exam
 
 The next (obvious?) question for me was whether or not one could fit six 15 letter words in a Scrabble game, covering each triple word score in both directions. This proved to be far more challenging; seeing as the only way to find solutions is to search through the solution space, which in our case is any combination of six fifteen letter words, or 771^6 = 2.1*10^17.
 
-The trick was to try and cut down on potential solutions by disqualifying as many word sets as early as possible in the algorithm. I did this in a few ways; first I reduced the number of words to search through by looking only at the letters in the crossing points (first, middle, last). Many words became the same then, like '<span style="text-decoration: underline;">d</span>isappo<span style="text-decoration: underline;">i</span>ntment<span style="text-decoration: underline;">s</span>' and '<span style="text-decoration: underline;">d</span>iscont<span style="text-decoration: underline;">i</span>nuance<span style="text-decoration: underline;">s</span>' are both looked at as 'dis'. I then made three dictionaries, the first two map all the one and two letter prefixes to their triples, the third maps triples to their full words.  This allows for a quick look up of allowable words given one, two or three constraints.
+The trick was to try and cut down on potential solutions by disqualifying as many words as early as possible in the algorithm. I did this in a few ways; first I reduced the number of words to search through by looking only at the letters in the crossing points (first, middle, last). Many words became the same then, like '<span style="text-decoration: underline;">d</span>isappo<span style="text-decoration: underline;">i</span>ntment<span style="text-decoration: underline;">s</span>' and '<span style="text-decoration: underline;">d</span>iscont<span style="text-decoration: underline;">i</span>nuance<span style="text-decoration: underline;">s</span>' are both looked at as 'dis'. I then made three dictionaries, the first two map all the one and two letter prefixes to their triples, the third maps triples to their full words.  This allows for a quick look up of allowable words given one, two or three constraints.  I learned later that I essentially created a [prefix tree, or a trie](http://en.wikipedia.org/wiki/Trie), which are is often used in algorithms for text prediction and spell checks.
 
-With these tools it's still necessary to do loop within loop, but the inner loops get progressively smaller as we can quickly look up the words that match the necessary constraints.
+With these dictionaries it's still necessary to run loops within loops, but the inner loops get progressively smaller as we can quickly look up the words that match the necessary constraints. It takes about a minute to run on my machine, and it finds that there are only 18 working configurations. I subsequently wrote another script which can generate gifs of the scrabble boards being filled! 
 
-A couple other tests were added to make sure a solution could be created given the Scrabble letter distribution, and to print out the six 15 letter words as though it were on the game board.
+<div id="scrabble-gallery">
+  <div class="flexslider">
+    <ul class="slides">
+      <li>
+        <img src="/images/scrabble15/winningBoards/board00.gif" />
+      </li>
+      <li>
+        <img src="/images/scrabble15/winningBoards/board01.gif" />
+      </li>
+      <li>
+        <img src="/images/scrabble15/winningBoards/board02.gif" />
+      </li>
+      <li>
+        <img src="/images/scrabble15/winningBoards/board03.gif" />
+      </li>
+      <li>
+        <img src="/images/scrabble15/winningBoards/board04.gif" />
+      </li>
+      <li>
+        <img src="/images/scrabble15/winningBoards/board05.gif" />
+      </li>
+      <li>
+        <img src="/images/scrabble15/winningBoards/board06.gif" />
+      </li>
+      <li>
+        <img src="/images/scrabble15/winningBoards/board07.gif" />
+      </li>
+      <li>
+        <img src="/images/scrabble15/winningBoards/board08.gif" />
+      </li>
+      <li>
+        <img src="/images/scrabble15/winningBoards/board09.gif" />
+      </li>
+      <li>
+        <img src="/images/scrabble15/winningBoards/board10.gif" />
+      </li>
+      <li>
+        <img src="/images/scrabble15/winningBoards/board11.gif" />
+      </li>
+      <li>
+        <img src="/images/scrabble15/winningBoards/board12.gif" />
+      </li>
+      <li>
+        <img src="/images/scrabble15/winningBoards/board13.gif" />
+      </li>
+      <li>
+        <img src="/images/scrabble15/winningBoards/board14.gif" />
+      </li>
+      <li>
+        <img src="/images/scrabble15/winningBoards/board15.gif" />
+      </li>
+      <li>
+        <img src="/images/scrabble15/winningBoards/board16.gif" />
+      </li>
+      <li>
+        <img src="/images/scrabble15/winningBoards/board17.gif" />
+      </li>
+    </ul>
+  </div>
 
-It takes about 2 minutes to run on my machine, and finds that there are only 18 working configurations. Looking through them I think my favourite is the following:
+  <!--style>
+  .flex-direction-nav .flex-next { right: 0 !important; margin-right: -30px; 
+     opacity: 1 !important; }
 
-    paleobi(ologists)
-    prep(resident)ial
-    de(hydrogen)ation
+  .flex-direction-nav .flex-prev { left: 0 !important; opacity: 1 !important; 
+     margin-left: -30px; }
 
-    photodu(plicated)
-    over(engineer)ing
-    (subvocal)ization
-
-    p a l e o b i o l o g i s t s
-    h             v             u
-    o             e             b
-    t             r             v
-    o             e             o
-    d             n             c
-    u             g             a
-    p r e p r e s i d e n t i a l
-    l             n             i
-    i             e             z
-    c             e             a
-    a             r             t
-    t             i             i
-    e             n             o
-    d e h y d r o g e n a t i o n
-
-
-That was a pretty entertaining experiment, but now (as always) I want to keep extending the scope.  There are a few next steps to this project; one would be to fill arbitrary patterns with words (crossword puzzle solver), finding the densest Scrabble game possible, finding impossible to complete Scrabble games (i.e. sets of word which you have no opportunity to play off of), extremely high scoring Scrabble games, etc. 
-
-Moral of the story: a trivial puzzle-solvers work is never done.
-
-<div class="flexslider">
-  <ul class="slides">
-    <li>
-      <img src="/images/scrabble15/winningBoards/board0.gif" />
-    </li>
-    <li>
-      <img src="/images/scrabble15/winningBoards/board1.gif" />
-    </li>
-    <li>
-      <img src="/images/scrabble15/winningBoards/board2.gif" />
-    </li>
-    <li>
-      <img src="/images/scrabble15/winningBoards/board3.gif" />
-    </li>
-    <li>
-      <img src="/images/scrabble15/winningBoards/board4.gif" />
-    </li>
-    <li>
-      <img src="/images/scrabble15/winningBoards/board5.gif" />
-    </li>
-    <li>
-      <img src="/images/scrabble15/winningBoards/board6.gif" />
-    </li>
-    <li>
-      <img src="/images/scrabble15/winningBoards/board7.gif" />
-    </li>
-    <li>
-      <img src="/images/scrabble15/winningBoards/board8.gif" />
-    </li>
-    <li>
-      <img src="/images/scrabble15/winningBoards/board9.gif" />
-    </li>
-    <li>
-      <img src="/images/scrabble15/winningBoards/board10.gif" />
-    </li>
-    <li>
-      <img src="/images/scrabble15/winningBoards/board11.gif" />
-    </li>
-    <li>
-      <img src="/images/scrabble15/winningBoards/board12.gif" />
-    </li>
-    <li>
-      <img src="/images/scrabble15/winningBoards/board13.gif" />
-    </li>
-    <li>
-      <img src="/images/scrabble15/winningBoards/board14.gif" />
-    </li>
-    <li>
-      <img src="/images/scrabble15/winningBoards/board15.gif" />
-    </li>
-    <li>
-      <img src="/images/scrabble15/winningBoards/board16.gif" />
-    </li>
-    <li>
-      <img src="/images/scrabble15/winningBoards/board17.gif" />
-    </li>
-  </ul>
+  .flexslider { width: 90%; margin: 0 auto; }
+  </style--!>
+  <script src="/assets/FlexSlider-version-2.2/jquery.flexslider-min.js"></script>
+  <script>
+      // Can also be used with $(document).ready()
+      $(window).load(function() {
+        $('.flexslider').flexslider({
+          animation: "slide",
+          slideshow:false
+        });
+      });
+  </script>
 </div>
 
-<!--style>
-.flex-direction-nav .flex-next { right: 0 !important; margin-right: -30px; 
-   opacity: 1 !important; }
 
-.flex-direction-nav .flex-prev { left: 0 !important; opacity: 1 !important; 
-   margin-left: -30px; }
+#Next Steps
 
-.flexslider { width: 90%; margin: 0 auto; }
-</style--!>
-<script src="/assets/FlexSlider-version-2.2/jquery.flexslider-min.js"></script>
-<script>
-    // Can also be used with $(document).ready()
-    $(window).load(function() {
-      $('.flexslider').flexslider({
-        animation: "slide",
-        slideshow:false
-      });
-    });
-</script>
+The only question I'm left asking with this project is, what are the final scores?
+
+While solving this puzzle I had a couple other questions come to mind. First would be determining achievable yet unplayable board positions; I've never been in such a situation, but I feel like it would be pretty funny. Second would "simply" be generating the highest possible Scrabble score. Both of these questions are likely to be a lot more challenging as there are simply too many outcomes to check with a brute force method.
+
+Here's the link to my [github Scrabble 15 project](http://github.com/algrant/scrabble15) where you can find all the project code.
+
+I'm glad that should I ever choose to tackle these I'll have some pre-existing code to generate pretty output!
